--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -309,159 +309,150 @@
 
 
 
-<!--以下是学历情况-->
-<div class="row">
-  <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
-    <div class="row" style=" background-color :#e4f0ff" >
-        <h4><font color="#1a56a8"> <strong>学历情况</strong></font></h4>
-                  
-    </div>
-         <div class="row">
-          <div class="col-sm-2" >
-            毕业时间
-           </div> <div class="col-sm-2">
-            学历项目
-           </div>
-           <div class="col-sm-2" >
-            学历
-           </div>
-           <div class="col-sm-2" >
-            毕业学校
-           </div>
-           <div class="col-sm-2" >
-            专业
-           </div>
-           <div class="col-sm-2" >
-            操作
-           </div>
-            <!--以下是具体学历信息：for循环这里-->
-            <div class="col-sm-2" style="background-color: #FFFFFF;">
-              2020-1-1
-             </div> <div class="col-sm-2" style="background-color: #FFFFFF;"> 
-              第一学历
-             </div>
-             <div class="col-sm-2" style="background-color: #FFFFFF;">
-              本科
-             </div>
-             <div class="col-sm-2" style="background-color: #FFFFFF;">
-              桂林电子科技大学
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              软件工程
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              <button type="button" class="btn btn-primary" >＋详情</button>  
-             </div>
-            <!--以上是具体学历信息：for循环这里-->
+  <!--以下是学历情况-->
+  <div class="row">
+      <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
+          <div class="row" style=" background-color :#e4f0ff" >
+              <h4><font color="#1a56a8"> <strong>学历情况</strong></font></h4>
           </div>
-                  
+          <div class="row">
+              <table class="table table-bordered table-hover">
+                  <thead>
+                  <tr style="background-color:#eef1f6" >
+                      <th scope="col">毕业时间</th>
+                      <th scope="col">学历项目</th>
+                      <th scope="col">学历</th>
+                      <th scope="col">毕业学校</th>
+                      <th scope="col">专业</th>
+                      <th scope="col">操作</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="list:${educationList}">
+                      <th scope="row" th:text="${#dates.format(list.educationGraduationTime, 'yyyy-MM-dd')}"></th>
+                      <td th:text="${list.educationGraduationProject}"></td>
+                      <td th:text="${list.educationLevel}"></td>
+                      <td th:text="${list.educationSchool}"></td>
+                      <td th:text="${list.educationMajor}"></td>
+                      <td>
+                          <button type="button" class="btn btn-primary" >＋详情</button>
+                      </td>
+                  </tr>
+                  </tbody>
+              </table>
+              <!--以下是具体学历信息：for循环这里-->
+
+              <!--以上是具体学历信息：for循环这里-->
           </div>
+
+      </div>
   </div>
-<!--以上是学历情况-->
+  <!--以上是学历情况-->
 
 
-<!--以下是主要经历-->
-<div class="row">
-  <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
-    <div class="row" style=" background-color :#e4f0ff" >
-    
-        <h4><font color="#1a56a8"> <strong>主要经历</strong></font></h4>
-                  
-    </div>
-         <div class="row">
-          <div class="col-sm-2" >
-            开始时间
-           </div> <div class="col-sm-2">
-            截至时间
-           </div>
-           <div class="col-sm-6" >
-            工作单位(学校)
-           </div>
-         
-           <div class="col-sm-2" >
-            操作
-           </div>
-            <!--以下是具体主要经历：for循环这里-->
-            <div class="col-sm-2" style="background-color:#FFFFFF;">
-              2020-1-1
-             </div> <div class="col-sm-2" style="background-color:#FFFFFF;"> 
-              2035-1-1
-             </div>
-             <div class="col-sm-6" style="background-color:#FFFFFF;">
-              清华大学
-             </div>
-             
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              <button type="button" class="btn btn-primary" >＋详情</button>  
-             </div>
-            <!--以上是具体主要经历：for循环这里-->
+  <!--以下是主要经历-->
+  <div class="row">
+      <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
+          <div class="row" style=" background-color :#e4f0ff" >
+
+              <h4><font color="#1a56a8"> <strong>主要经历</strong></font></h4>
+
           </div>
-                  
+
+
+
+          <div class="row">
+
+
+              <table class="table table-bordered table-hover">
+                  <thead>
+                  <tr style="background-color:#eef1f6" >
+                      <th scope="col">开始时间</th>
+                      <th scope="col">截至时间</th>
+                      <th scope="col">工作单位(学校)</th>
+                      <th scope="col">操作</th>
+
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="list:${experienceList}">
+                      <th scope="row" th:text="${#dates.format(list.experienceStarttime, 'yyyy-MM-dd')}"></th>
+                      <td th:text="${#dates.format(list.experienceEndtime, 'yyyy-MM-dd')}"></td>
+                      <td th:text="${list.experienceInstitution}"></td>
+                      <td>
+                          <button type="button" class="btn btn-primary" >＋详情</button>
+                      </td>
+                  </tr>
+                  </tbody>
+              </table>
+              <!--以上是具体主要经历：for循环这里-->
           </div>
+
+      </div>
   </div>
-<!--以上是主要经历-->
+  <!--以上是主要经历-->
 
 
-<!--以下是论文/著作-->
-<div class="row">
-  <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
-    <div class="row" style=" background-color :#e4f0ff" >
-    
-        <h4><font color="#1a56a8"> <strong>论文、著作</strong></font></h4>
-                  
-    </div>
-  
+  <!--以下是论文/著作-->
+  <div class="row">
+      <div class="col-sm-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
+          <div class="row" style=" background-color :#e4f0ff" >
 
+              <h4><font color="#1a56a8"> <strong>论文、著作</strong></font></h4>
 
-         <div class="row">
-          <div class="col-sm-1" >
-            序号
-           </div> <div class="col-sm-1">
-            发表时间
-           </div>
-           <div class="col-sm-2" >
-            论文类别
-           </div>
-         
-           <div class="col-sm-2" >
-            论文著作名称
-           </div>
-           <div class="col-sm-2" >
-            登载刊物名称、刊号
-           </div>
-           <div class="col-sm-2" >
-            角色
-           </div>
-           <div class="col-sm-2" >
-            操作
-           </div>
-            <!--以下是论文/著作：for循环这里-->
-            <div class="col-sm-1" style="background-color:#FFFFFF;">
-              2020-1-1
-             </div> <div class="col-sm-1" style="background-color:#FFFFFF;"> 
-              2035-1-1
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              清华大学
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              清华大学
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              清华大学
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              清华大学
-             </div>
-             <div class="col-sm-2" style="background-color:#FFFFFF;">
-              <button type="button" class="btn btn-primary" >＋详情</button>  
-             </div>
-            <!--以上是论文/著作：for循环这里-->
           </div>
-                  
+
+
+
+          <div class="row">
+
+
+
+
+
+              <table class="table table-bordered table-hover">
+                  <thead>
+                  <tr style="background-color:#eef1f6" >
+                      <th scope="col">序号</th>
+                      <th scope="col">发表时间</th>
+                      <th scope="col">论文类别</th>
+                      <th scope="col">论文著作名称</th>
+                      <th scope="col">登载刊物名称、刊号</th>
+                      <th scope="col">角色</th>
+
+                      <th scope="col">操作</th>
+
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="list,listStat:${paperList}">
+                      <th scope="row" th:text="${listStat.count}"></th>
+                      <th scope="row" th:text="${#dates.format(list.paperDate, 'yyyy-MM-dd')}"></th>
+                      <td th:text="${list.paperType}"></td>
+                      <td th:text="${list.paperName}"></td>
+                      <td th:text="${list.paperPart}"></td>
+                      <td th:text="${list.paperPublication}"></td>
+                      <td th:text="${list.paperPart}"></td>
+
+                      <td>
+                          <button type="button" class="btn btn-primary" >＋详情</button>
+                      </td>
+                  </tr>
+                  </tbody>
+              </table>
+
+
+
+
+
+
+
+              <!--以上是论文/著作：for循环这里-->
           </div>
+
+      </div>
   </div>
-<!--以上是论文/著作-->
+  <!--以上是论文/著作-->
 
 
 
@@ -511,7 +502,7 @@
       </div>
     
   
-  
+
 
 
 
