--- a/src/main/resources/templates/Manage.html
+++ b/src/main/resources/templates/Manage.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
  
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <base th:href="@{/}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
     <link href="assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
@@ -302,47 +303,24 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <th scope="row">1</th>
-                                                <td>李明</td>
-                                                <td>12345678</td>
-                                                <td>
-                                                    <div class="switch-button switch-button-danger">
-                                                        <input type="checkbox" checked="" name="switch18" id="switch18">
-                                                        <span><label for="switch18"></label></span>
+                                        <tr th:each="list:${workerList}">
+                                            <th scope="row" th:text=${listStat.count}></th>
+                                            <td th:text=${list.workerName}></td>
+                                            <td th:text=${list.workerPhone}></td>
+                                            <td>
+                                                <div class="switch-button switch-button-danger">
+                                                    <input type="checkbox" checked="" name="switch18" id="switch18">
+                                                    <span><label for="switch18"></label></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col-md-2">
+                                                        <a th:href="@{'/corporation/deleteuser?userName='+${list.workerName}}" class="btn btn-rounded btn-danger btn-xs">删除</a>
                                                     </div>
-                                                </td>
-                                                <td>
-                                                    <div class="row">
-                                                        <div class="col-md-2">
-                                                            <a href="#" class="btn btn-rounded btn-danger btn-xs">删除</a>
-                                                        </div>
-                                                        
-                                                    </div>
-                                                    
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">2</th>
-                                                <td>小明</td>
-                                                <td>12345679</td>
-                                                <td>
-                                                    <div class="switch-button switch-button-danger">
-                                                        <input type="checkbox" checked="" name="switch19" id="switch19">
-                                                        <span><label for="switch19"></label></span>
-                                                    </div>
-                                                </td>
-                                                <td>
-                                                    <div class="row">
-                                                        <div class="col-md-2">
-                                                            <a href="#" class="btn btn-rounded btn-danger btn-xs">删除</a>
-                                                        </div>
-                                                        
-                                                    </div>
-                                                    
-                                                </td>
-                                            </tr>
-                                            
+                                                </div>
+                                            </td>
+                                        </tr>
                                         </tbody>
                                     </table>
                                 </div>
