--- a/src/main/resources/templates/pingshen_input.html
+++ b/src/main/resources/templates/pingshen_input.html
@@ -102,17 +102,9 @@ function check()
   <!--以下是个人承诺-->
   <div class="row">
     <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
-  
-     
-  
       <div class="row" style=" background-color :#e4f0ff" >
-      
           <h4><font color="#1a56a8"> <strong>个人承诺</strong></font></h4>
-                    
       </div>
-    
-  
-  
            <div class="row">
                    <div class="col-sm-12" style="border-color:#eef1f6 ;">
                     <h3 align="center"><font color="#d9524e"> 职称申报个人承诺书</font></h3>
@@ -172,13 +164,11 @@ function check()
 
 
           <div class="row">
-            
-            
+
                     <div class="form-group" style="width: 450px; ">
                         <!--指定 date标记-->
             
                         <div class='input-group date' id='datetimepicker1'>
-            
                             <input  name="declare_worktime"  type='text' class="form-control" />
             
                             <span class="input-group-addon">
@@ -253,9 +243,9 @@ function check()
        </div>
         <div class="col-sm-6" style="background-color: #FFFFFF;">
             <select   name="" style="width: 400px; height:40px">
-                <option value="值">单位1</option>
-                <option value="值">单位2</option>
-                <option value="值">单位3</option>
+                <option value="单位1">单位1</option>
+                <option value="单位2">单位2</option>
+                <option value="单位3">单位3</option>
                 </select>
          </div>
     </div>
@@ -287,7 +277,7 @@ function check()
             <h5><font color="#FF0033"> * </font>&nbsp姓名</h5>
            </div>
             <div class="col-sm-3">
-                <input  style="width: 200px; height:40px ;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserName()}" readonly/>
+                <input  style="width: 200px; height:40px ;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserName()}" name="declareUserName" readonly/>
              </div>
              <div class="col-sm-3">
                 <h5><font color="#FF0033"> * </font>&nbsp民族</h5>
@@ -359,7 +349,7 @@ function check()
                 <h5><font color="#FF0033"> * </font>&nbsp证件号码</h5>
              </div>
               <div class="col-sm-3" >
-                <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserIdentifyID()}" readonly/>
+                <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserIdentifyID()}" name="declareUserIdentifynumber" readonly/>
                </div>
                <div class="col-sm-3">
                 政治面貌
@@ -412,7 +402,7 @@ function check()
                     <h5><font color="#FF0033"> * </font>&nbsp性别</h5>
                  </div>
                   <div class="col-sm-3" style="background-color: #FFFFFF;">
-                    <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text"  value="男" readonly/>
+                    <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text"  value="男" name="declareUserSex" readonly/>
                    </div>
                    <div class="col-sm-3">
                     有何特长
@@ -638,30 +628,14 @@ function check()
       
     
     </div>
-
-
   </form>
-  
-
   </div>
- 
- 
   </div>
-
   </div>
-
-
-
 
 
   </div>
   <div class="row">
-
-
-
-
-
-
       <table class="table table-bordered table-hover">
           <thead>
           <tr style="background-color:#eef1f6" >
@@ -675,11 +649,11 @@ function check()
           </thead>
           <tbody>
           <tr th:each="list:${educationList}">
-              <th scope="row" th:text=${list.educationGraduationTime}></th>
-              <td th:text=${list.educationGraduationProject}></td>
-              <td th:text=${list.educationLevel}></td>
-              <td th:text=${list.educationSchool}></td>
-              <td th:text=${list.educationMajor}></td>
+              <th scope="row" th:text="${#dates.format(list.educationGraduationTime, 'yyyy-MM-dd')}"></th>
+              <td th:text="${list.educationGraduationProject}"></td>
+              <td th:text="${list.educationLevel}"></td>
+              <td th:text="${list.educationSchool}"></td>
+              <td th:text="${list.educationMajor}"></td>
               <td>
                   <button type="button" class="btn btn-primary" >＋详情</button>
               </td>
@@ -692,19 +666,12 @@ function check()
 
   </div>
 
-
-
-
-
   </div>
   </div>
   
   
   <!--以上是学历信息-->
-  
-  
 
-  
   <!--以下是工作情况-->
   
   <div class="row">
@@ -733,9 +700,6 @@ function check()
 
     <form action="" method="post" th:action="@{'/PersonalDeclare/AddExperience'}">
     <div class="modal-body">
-      
-      
-
 
  <!--以下是弹窗内容-->
  <div class="row">
@@ -814,27 +778,18 @@ function check()
           </thead>
           <tbody>
           <tr th:each="list:${experienceList}">
-              <th scope="row" th:text=${list.experienceStarttime}></th>
-              <th scope="row" th:text=${list.experienceEndtime}></th>
-              <td th:text=${list.experienceInstitution}></td>
-              <td th:text=${list.experienceStatus}></td>
-              <td th:text=${list.experienceType}></td>
-
+              <th scope="row" th:text="${#dates.format(list.experienceStarttime, 'yyyy-MM-dd')}"></th>
+              <td th:text="${#dates.format(list.experienceEndtime, 'yyyy-MM-dd')}"></td>
+              <td th:text="${list.experienceInstitution}"></td>
+              <td>
+                  <button type="button" class="btn btn-primary" >＋详情</button>
+              </td>
           </tr>
           </tbody>
       </table>
       <!--以下是具体学历信息：for循环这里-->
 
       <!--以上是具体学历信息：for循环这里-->
-
-
-
-
-
-
-
-
-
 
   </div>
   </div>
